# dashboard

./: .env  .env.example  .gitignore  AGENTS.md  DB.md  GEMINI.md  README.md  main.py  project.md  pyproject.toml
.streamlit/: config.toml  secrets.toml
config/: products.yaml
config/specs/: productA.yaml  productB.yaml
data/: products.csv  sort_sample.csv  specs.csv  test.db  wat_sample.csv
data/SCP117A/: sort.csv  specs.csv  wat.csv
data/SCT101A/: sort.csv  specs.csv  wat.csv
data/productA/: sort.csv  specs.csv  wat.csv
data/productB/: sort.csv  specs.csv  wat.csv
pages/: 1_Yield.py  1_Yield_Analysis.py  1_Yield_Dev.py  1_Yield_Prod.py  2_WAT_SPC.py  2_WAT_SPC_Dev.py  2_WAT_SPC_Prod.py  3_Wafer_Map_Viewer.py
src/app/: __init__.py  config.py  products.py  specs.py
src/app/charts/: __init__.py  wat_charts.py  yield_charts.py
src/app/data/: __init__.py  oracle_repo.py  repositories.py  sqlite_repo.py
src/app/services/: __init__.py  wat_service.py  yield_service.py
src/app/ui/: __init__.py  components.py
src/modules/: database.py  db_utils.py  sidebar.py  spc_charts.py  sql_queries.py  utils.py  yield_charts.py
