[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.51.0",
    "oracledb>=2.5.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]
